Fix Java terminal deprecations
This is cosmetic for Java 17, but will be required for some later
version. Fixing it now greatly reduces the number of warnings we see.